k8s/apps/experiments/argo-rollout/nginx/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: default
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        nginx:
          stableIngress: rollouts-demo-stable
      steps:
      - setWeight: 10
      - pause: {}
      - setWeight: 45
      - pause: {}
      - setWeight: 75
      - pause: {duration: 120}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: k3s.io/hostname
                operator: In
                values:
                - k3s-worker-2
          # preferredDuringSchedulingIgnoredDuringExecution:
          # - weight: 1
          #   preference:
          #     matchExpressions:
          #     - key: beta.kubernetes.io/arch
          #       operator: In
          #       values:
          #       - amd64
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:yellow
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
